--- a/src/app/modules/media/youtube-migration/config/config.component.scss
+++ b/src/app/modules/media/youtube-migration/config/config.component.scss
@@ -25,6 +25,7 @@ m-youtubemigration__config {
   .m-form__customInputWrapper__checkbox {
     font-size: 15px;
     line-height: 21px;
+    font-weight: 300;
     @include m-theme() {
       color: themed($m-textColor--secondary);
     }
