--- a/src/app/modules/media/youtube-migration/migrated-videos/migrated-videos.component.html
+++ b/src/app/modules/media/youtube-migration/migrated-videos/migrated-videos.component.html
@@ -4,19 +4,19 @@
 <ng-container *ngIf="init">
   <ng-container *ngIf="videos.length > 0 && videos[0].display">
     <m-youtubeMigration__videoList
-      *ngIf="videos.length > 0"
       [videos]="videos"
       (requestPlay)="onModalRequested($event)"
     ></m-youtubeMigration__videoList>
-    <infinite-scroll
-      distance="25%"
-      (load)="load()"
-      [moreData]="moreData"
-      [inProgress]="inProgress"
-    >
-    </infinite-scroll>
   </ng-container>
-  <div *ngIf="videos.length === 0" class="m-youtubeMigration__notice">
-    <p>No transferred videos</p>
+  <div *ngIf="noInitResults" class="m-youtubeMigration__notice">
+    <p i18n>No transferred videos</p>
   </div>
+  <infinite-scroll
+    *ngIf="!fewerResultsThanLimit"
+    distance="25%"
+    (load)="load()"
+    [moreData]="moreData"
+    [inProgress]="inProgress"
+  >
+  </infinite-scroll>
 </ng-container>
