--- a/src/app/modules/media/youtube-migration/setup-modal/setup-modal.component.html
+++ b/src/app/modules/media/youtube-migration/setup-modal/setup-modal.component.html
@@ -1,25 +1,22 @@
-<ng-container *ngIf="activeChannel"
+<ng-container
   ><p class="m-settingsV2__desc">
-    Your YouTube channel <em>{{ activeChannel.title }}</em
-    >is now connected to Minds. Do you want new videos uploaded to YouTube
-    automatically posted to Minds?
+    Your YouTube channel is now connected. Do you want your new YouTube videos
+    to be automatically posted to Minds?
   </p>
-  >
-  <p class="m-settingsV2__desc">
-    If you change your mind, you can always change this setting in the Config
-    tab of this page.
-  </p>
-
   <div class="m-youtubeMigration__setupModal__buttonsContainer">
-    <m-shadowboxSubmitButton color="grey" (click)="disableAutoImport()"
+    <m-shadowboxSubmitButton
+      color="grey"
+      (click)="submit(false)"
+      [disabled]="inProgress"
+      [saving]="inProgress"
       >I'll do it manually</m-shadowboxSubmitButton
     >
     <m-shadowboxSubmitButton
       color="green"
-      (click)="enableAutoImport()"
+      (click)="submit(true)"
       [disabled]="inProgress"
       [saving]="inProgress"
-      >Autopost new YouTube videos</m-shadowboxSubmitButton
+      >Auto-post new YouTube videos</m-shadowboxSubmitButton
     >
   </div>
 </ng-container>
