--- a/src/app/modules/media/youtube-migration/setup-modal/setup-modal.component.scss
+++ b/src/app/modules/media/youtube-migration/setup-modal/setup-modal.component.scss
@@ -1,8 +1,14 @@
 m-youtubeMigration__setupModal {
+  display: block;
+  padding: 30px;
+  p {
+    font-size: 15px;
+  }
   .m-youtubeMigration__setupModal__buttonsContainer {
     display: flex;
     flex-flow: row wrap-reverse;
-    justify-content: flex-end;
+    justify-content: center;
+    margin-top: 30px;
     @media screen and (max-width: $max-mobile) {
       width: 100%;
     }
