--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -14,6 +14,7 @@
   <div class="m-discovery__sidebar" m-pageLayout__pane="right">
     <m-discovery__disclaimer></m-discovery__disclaimer>
     <m-discovery__sidebarTags></m-discovery__sidebarTags>
-    <m-suggestions__sidebar></m-suggestions__sidebar>
+    <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
+    <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
   </div>
 </div>
