don't allow wrap on buy tokens button

--- a/src/app/modules/wallet/v2/tokens/balance/balance-tokens.component.scss
+++ b/src/app/modules/wallet/v2/tokens/balance/balance-tokens.component.scss
@@ -151,7 +151,7 @@ m-walletBalance--tokens {
     button.m-shadowboxSubmitButton {
       height: 35px;
       max-height: 35px;
-      min-width: 0;
+      min-width: 105px;
       min-height: 0;
     }
     .m-shadowboxSubmitButton__status--unsaved {
