--- a/src/app/modules/wallet/v2/tokens/tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/tokens.component.html
@@ -29,6 +29,6 @@
   </li>
 </div>
 
-<div class="m-walletDashboardViews__viewsContainer">
+<div class="m-walletDashboardViews__viewsContainer" #dashboardViews>
   <router-outlet></router-outlet>
 </div>
