--- a/src/app/modules/wallet/v2/cash/cash.component.html
+++ b/src/app/modules/wallet/v2/cash/cash.component.html
@@ -17,6 +17,6 @@
   </li>
 </div>
 
-<div class="m-walletDashboardViews__viewsContainer">
+<div class="m-walletDashboardViews__viewsContainer" #dashboardViews>
   <router-outlet></router-outlet>
 </div>
