--- a/src/app/modules/wallet/v2/cash/settings/cash-onboarding/cash-onboarding.component.html
+++ b/src/app/modules/wallet/v2/cash/settings/cash-onboarding/cash-onboarding.component.html
@@ -5,7 +5,7 @@
     </p>
     <m-shadowboxSubmitButton (click)="enterEditMode()"
       >Add your bank details</m-shadowboxSubmitButton
-    >`
+    >
   </div>
   <!-- -------------------------------------------- -->
   <!--- FORM ----------------------------------------->
@@ -34,7 +34,7 @@
                 data-minds="country"
                 [allowed]="allowedCountries"
                 [country]="country.value"
-                (countryChange)="country.setValue($event); revalidateForm()"
+                (countryChange)="countryChange($event)"
               ></minds-country-input>
             </div>
           </div>
