--- a/src/app/modules/blockchain/eth-modal/eth-modal.component.html
+++ b/src/app/modules/blockchain/eth-modal/eth-modal.component.html
@@ -30,6 +30,10 @@
       You can not purchase more than $40 worth of ETH
     </p>
 
+    <p class="m-error mdl-color-text--red" *ngIf="error">
+      {{ error }}
+    </p>
+
     <button
       class="m-btn m-btn--slim m-btn--action"
       (click)="buy()"
