--- a/src/app/modules/media/youtube-migration/unmigrated-videos/unmigrated-videos.component.html
+++ b/src/app/modules/media/youtube-migration/unmigrated-videos/unmigrated-videos.component.html
@@ -13,7 +13,7 @@
     <p i18n>No available YouTube videos</p>
   </div>
   <infinite-scroll
-    *ngIf="!fewerResultsThanLimit"
+    *ngIf="moreData"
     distance="25%"
     (load)="load()"
     [moreData]="moreData"
