Youtube autoimport setup

--- a/src/app/modules/media/youtube-migration/transfer-status/transfer-status.component.html
+++ b/src/app/modules/media/youtube-migration/transfer-status/transfer-status.component.html
@@ -6,12 +6,17 @@
     </div>
     <div>
       <div>
-        <span>{{ queuedCount }}</span> queued ·
+        <span>{{ counts.queued }}</span> queued ·
       </div>
       <div>
-        <span>{{ transferringCount }}</span> transferring
+        <span>{{ counts.transferring }}</span> transferring
       </div>
     </div>
   </div>
-  <a (click)="transferAllVideos()">Transfer all videos</a>
+  <a
+    (click)="transferAllVideos()"
+    [ngClass]="{ 'm-youtubeMigration__transferAll--active': transferringAll }"
+    ><ng-container *ngIf="!transferringAll">Transfer all videos</ng-container>
+    <ng-container *ngIf="transferringAll">Transferring</ng-container></a
+  >
 </div>
