--- a/src/app/modules/discovery/tags/tags.component.html
+++ b/src/app/modules/discovery/tags/tags.component.html
@@ -4,6 +4,7 @@
       routerLink="../overview"
       routerLinkActive="m-tabs__tab--selected"
       [queryParams]="{ reload: false }"
+      data-cy="discovery-tab-link-overview"
       >Just for you</a
     >
   </div>
