--- a/src/app/common/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/common/components/loading-spinner/loading-spinner.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="inProgress">
+<div class="m-loadingSpinner__wrapper" *ngIf="inProgress">
   <div class="m-loadingSpinner__container" @fastFade>
     <div class="m-loadingSpinner__inner"></div>
   </div>
-</ng-container>
+</div>
