--- a/src/app/modules/discovery/trends/trends.component.html
+++ b/src/app/modules/discovery/trends/trends.component.html
@@ -17,9 +17,15 @@
   </div>
 </div>
 
-<ul class="m-discovery__trends">
-  <m-loadingSpinner [inProgress]="inProgress$ | async"> </m-loadingSpinner>
+<m-loadingSpinner [inProgress]="inProgress$ | async"> </m-loadingSpinner>
 
+<m-discovery__noTagsPrompt
+  *ngIf="showNoTagsPrompt$ | async"
+  (completed)="refresh()"
+  @fastFade
+></m-discovery__noTagsPrompt>
+
+<ul class="m-discovery__trends" @fastFade *ngIf="(trends$ | async).length > 0">
   <li
     class="m-discoveryTrends__trend m-discoveryTrends__trend--hero"
     *ngIf="hero$ | async"
