(feat): refactor settings button and move tags button to trends topbar - closes #2807

--- a/src/app/modules/discovery/feeds/feeds.component.html
+++ b/src/app/modules/discovery/feeds/feeds.component.html
@@ -10,7 +10,7 @@
     >
   </div>
   <div class="m-layout__spacer"></div>
-  <m-discoveryFeeds__settingsButton></m-discoveryFeeds__settingsButton>
+  <m-discovery__settingsButton modalType="feed"></m-discovery__settingsButton>
 </div>
 
 <div class="m-goBack">
