--- a/src/app/modules/discovery/trends/trends.component.html
+++ b/src/app/modules/discovery/trends/trends.component.html
@@ -15,6 +15,8 @@
       >Discover by tags</a
     >
   </div>
+  <div class="m-layout__spacer"></div>
+  <m-discovery__settingsButton modalType="tags"></m-discovery__settingsButton>
 </div>
 
 <m-loadingSpinner [inProgress]="inProgress$ | async"> </m-loadingSpinner>
