--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -12,9 +12,11 @@
     ></m-discovery__disclaimer>
   </div>
   <div class="m-discovery__sidebar" m-pageLayout__pane="right">
-    <m-discovery__disclaimer></m-discovery__disclaimer>
-    <m-discovery__sidebarTags></m-discovery__sidebarTags>
-    <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
-    <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
+    <div class="m-pageLayoutPane__inner" m-stickySidebar>
+      <m-discovery__disclaimer></m-discovery__disclaimer>
+      <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
+      <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
+      <m-discovery__sidebarTags></m-discovery__sidebarTags>
+    </div>
   </div>
 </div>
