(feat): pause timeout on mouseover and resume on mouseleave (fix): memory leak

--- a/src/app/common/components/form-toast/form-toast.component.html
+++ b/src/app/common/components/form-toast/form-toast.component.html
@@ -3,6 +3,8 @@
     <div
       class="m-formToast__wrapper"
       [@fader]="toast.dismissed ? 'dismissed' : 'active'"
+      (mouseover)="pauseTimeout(i)"
+      (mouseleave)="resumeTimeout(i)"
     >
       <div [ngClass]="['m-formToast__iconWrapper--' + toast.type]">
         <i class="material-icons">
