--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -444,7 +444,7 @@
     }
   }
 
-  input:not(.m-phoneInput__input):not(.m-draggableList__cell),
+  input:not(.m-phoneInput__input):not(.m-draggableList__cell):not(.m-copyableLink),
   .m-phoneInput__wrapper,
   textarea,
   select {
