--- a/src/app/modules/wire/v2/creator/shop/shop.component.html
+++ b/src/app/modules/wire/v2/creator/shop/shop.component.html
@@ -12,42 +12,47 @@
         >@{{ owner?.username }} has support tiers exclusive offers</ng-container
       >
       &middot;
-      <a [routerLink]="['/', owner.username]">Explore Shop</a>
+      <a (click)="dismiss()" [routerLink]="['/', owner.username, 'shop']"
+        >Explore Shop</a
+      >
     </div>
   </div>
 
   <div
-    *ngIf="service.wireRewards$ | async as wireRewards"
+    *ngIf="shop.supportTiers.groupedList$ | async as groupedSupportTiers"
     class="m-wireCreatorShop__select m-form__field--select"
-    [class.m-wireCreatorShopSelect__placeholder]="!(shop.selectedId$ | async)"
+    [class.m-wireCreatorShopSelect__placeholder]="!(shop.selected$ | async)"
   >
     <div class="m-form__row--input">
       <select
-        [ngModel]="shop.selectedId$ | async"
+        [compareWith]="byUrn"
+        [ngModel]="shop.selected$ | async"
         (ngModelChange)="shop.select($event)"
       >
         <option value="" disabled i18n>Select Support Tier</option>
 
         <optgroup label="Tokens" i18n-label>
           <option
-            *ngFor="let entry of wireRewards.tokens"
-            [value]="'tokens:' + entry.amount"
+            *ngFor="let supportTier of groupedSupportTiers.tokens"
+            [ngValue]="supportTier"
           >
             <ng-container i18n
-              >{entry.amount, plural, =1 {{{entry.amount | number}} token} other
-              {{{entry.amount | number}} tokens}}</ng-container
+              >{supportTier.amount, plural, =1
+              {{{supportTier.amount | number}} token} other
+              {{{supportTier.amount | number}} tokens}}</ng-container
             >
-            - {{ entry.description }}
+            - {{ supportTier.name }}
           </option>
         </optgroup>
 
         <optgroup label="USD" i18n-label>
           <option
-            *ngFor="let entry of wireRewards.usd"
-            [value]="'usd:' + entry.amount"
+            *ngFor="let supportTier of groupedSupportTiers.usd"
+            [ngValue]="supportTier"
           >
-            <ng-container i18n>${{ entry.amount | number }}</ng-container> -
-            {{ entry.description }}
+            <ng-container i18n>${{ supportTier.amount | number }}</ng-container>
+            -
+            {{ supportTier.description }}
           </option>
         </optgroup>
       </select>
