--- a/src/app/modules/wire/v2/creator/wire-creator.component.html
+++ b/src/app/modules/wire/v2/creator/wire-creator.component.html
@@ -2,7 +2,8 @@
   <m-wireCreator__ownerBlock></m-wireCreator__ownerBlock>
   <m-wireCreator__form></m-wireCreator__form>
   <m-wireCreator__shop
-    *ngIf="(service.wireRewards$ | async)?.count"
+    *ngIf="(supportTiers.list$ | async)?.length"
+    (onDismissIntent)="onDismissIntent()"
   ></m-wireCreator__shop>
   <m-wireCreator__toolbar (onSubmit)="onSubmit()"></m-wireCreator__toolbar>
 </div>
