align infinite scroll icon with group sidebar markers

--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
@@ -114,6 +114,7 @@
     [inProgress]="inProgress"
     [iconOnly]="true"
     *ngIf="moreData"
+    [ngClass]="{ hasNewNavigation: hasNewNavigation }"
   >
   </infinite-scroll>
 </ul>
